why doesnt it work?

--- a/insta-backend/.env
+++ b/insta-backend/.env
@@ -1,3 +1,5 @@
-MONGO_URI=mongodb+srv://maddy:PassWord@cluster0.0xpgb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT=5000
+# MONGO_URI=mongodb+srv://maddy:PassWord@cluster0.mongodb.net/insta-clone-backend?retryWrites=true&w=majority&appName=Cluster0
+# PORT=5000
 
+MONGO_URI=mongodb+srv://maddy:NewPassWord@cluster0.0xpgb.mongodb.net/Insta-Clone-Backend?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
